# sdl-game

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/components/: CMakeLists.txt  Script_Component.h  Transform_Component.h
src/errors/: CMakeLists.txt  Error_Container.cpp  Error_Container.h  Errors.cpp  Errors.h
src/game_objects/: CMakeLists.txt  Game_Object.cpp  Game_Object.h
src/game_objects/red_square/: CMakeLists.txt  Move_Script.cpp  Move_Script.h  red_square.cpp  red_square.h
src/scenes/: CMakeLists.txt  Scene.cpp  Scene.h
src/sdl/: CMakeLists.txt  Init_Exception.cpp  Init_Exception.h  SDL.cpp  SDL.h
src/utils/: Enable_Shared_This.h
